--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,12 @@ url: "https://elildg.github.io/"
 # Replace the word 'example' with your username if you want to include the icon in the left sidebar
 # Delete the word 'example' if you don't want to include the icon in the left sidebar
 
-twitter_username:     example  # Replace this with your Twitter username
+# twitter_username:     example  # Replace this with your Twitter username
 github_username:      elildg
-linkedin_username:    example  # Replace this with your LinkedIn username
-google_plus_username: example  # Replace this with your Google+ username
-facebook_username:    example  # Replace this with your Facebook username
-dribbble_username:    example  # Replace this with your Dribbble username
+linkedin_username:    elisabeth-laliberté-de-gagné-782384108
+# google_plus_username: example  # Replace this with your Google+ username
+# facebook_username:    example  # Replace this with your Facebook username
+# dribbble_username:    example  # Replace this with your Dribbble username
 
 # Build settings
 markdown: kramdown
